--- a/contact.htm
+++ b/contact.htm
@@ -51,6 +51,7 @@
             <a href="https://www.tiktok.com/@djcamo" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
         </div>
         <p>Please Note: Time/Dates are Only Show via BST/GMT</p>
+        <p>Email: djamo.public.uk@outlook.com</p>
         <p>© 2026 DJ Camo Official. All rghts reserved.</p>
     </footer>
 
