--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 
-    <!-- Snow container -->
+    
     <div class="snow-container"></div>
     <script src="snow.js"></script>
 
@@ -32,6 +32,8 @@
 
     <h3>Hey, I'm DJ Camo official</h3>
     <h4>Welcome to my official website! Here, you'll find all the latest updates on my music releases and more, Stay tuned for more exciting news!</h4>
+    <p class="newyears" id="newyear" ></p>
+    
     <div class="grid-container">
 
         <main class="Box2">
@@ -54,7 +56,7 @@
             <h2>Waiting to be written!</h2>
         </main>
 
-        <main class="Box3">
+        <main  class="Box3">
             <h3>Latest News</h3>
             <h4>Stay Tuned for more updates!</h4>
             <h2>Waiting to be written!</h2>
@@ -69,6 +71,7 @@
             <a href="https://www.tiktok.com/@djcamo" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
         </div>
         <p>Please Note: Time/Dates are Only Show via BST/GMT</p>
+        <p>Email: djamo.public.uk@outlook.com</p>
         <p>© 2026 DJ Camo Official. All rghts reserved.</p>
     </footer>
 
