--- a/contact.htm
+++ b/contact.htm
@@ -36,8 +36,8 @@
             <h3 id="NR">Contact Me Here!</h3>
             <form action="https://api.web3forms.com/submit" method="POST" class="contact" >
                 <input type="hidden" name="access_key" value="20d61232-101b-4481-a364-66333c790f34">
-                <input type="text" name="Name" placeholder="Your Email" class="contact-inputs" required>
-                <input type="text" name="Email" placeholder="Your Name" class="contact-inputs" required>
+                <input type="text" name="Email" placeholder="Your Email" class="contact-inputs" required>
+                <input type="text" name="Name" placeholder="Your Name" class="contact-inputs" required>
                 <textarea name="Message" placeholder="Your Message" class="contact-inputs" required></textarea>
                 <button class="buttonsubmit" type="submit">Submit</button>
             </form>
