--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         </main>
 
         <main  class="Box3">
-            <h3>Latest News</h3>
-            <h4>Stay Tuned for more updates!</h4>
-            <h2>Waiting to be written!</h2>
+            <h3>Latest Message</h3>
+            <h4>Thank you 2025!</h4>
+            <h2> I Want to thank your support in 2025, it's been amazing!, and I hope you enjoy the new music, thats planned for 2026!</h2>
         </main>
 
     </div>
