--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     <p class="BDAY" id="bday" ></p> 
 
-    
+
 
     <div class="grid-container">
 
@@ -46,7 +46,12 @@
             <img src="imgs/DJ CAMO.jpg" alt="" width="30%" style="border-radius: 10px; margin-left: 34%;">
             <h2>Release Date: 01/01/2026</h2>
             <h3 id="countdown"></h3>
+            <div class="SongLink"> Play
+                <a href="https://djcamoofficial.bandcamp.com/track/stay-2" target="_blank"></a>
+            </div>
         </main>
+
+        <iframe class="songPre" data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/album/6UoxHGtI4cZDZ5pdQsHwaj?utm_source=generator" width="80%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy" ></iframe>
 
         <main class="Box1">
             <h3>Best Release</h3>
