--- a/index.html
+++ b/index.html
@@ -96,5 +96,6 @@
         <p>© 2026 DJ Camo Official. All rghts reserved.</p> 
 
     </footer>
+    <script src="tracker.js"></script>
 </body>
 </html>
