--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
         <main class="Box2">
             <h3 id="NR">Next Release</h3>
-            <h4>Stay</h4>
-            <img src="imgs/DJ CAMO.jpg" alt="" width="30%" style="border-radius: 10px; margin-left: 34%;">
-            <h2>Release Date: 01/01/2026</h2>
+            <h4>Love Me</h4>
+            <img src="imgs/Love M-2.jpg" alt="" width="30%" style="border-radius: 10px; margin-left: 34%;">
+            <h2>Release Date: 01/19/2026</h2>
             <h3 id="countdown"></h3>
 
         </main>
