--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <h3>Hey, I'm DJ Camo official</h3>
     <h4>Welcome to my official website! Here, you'll find all the latest updates on my music releases and more, Stay tuned for more exciting news!</h4>
-    
+    <h5 id="Infomesg" >67 Sound Button will be leaving after the next Release "Love Me"!</h5>
     <p class="BDAY" id="bday" ></p> 
 
 
