--- a/Contact/index.html
+++ b/Contact/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/music">Music</a></li>
-                <li><a href="/contact" class="activepage" >Contact</a></li>
+                <li><a href="/Contact" class="activepage" >Contact</a></li>
             </ul>
         </div>
     </div>
