--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 </div>
 
 <div class="warning-box">
+    <p class="warntext">Every page has been reimagined with a fresh frosted‑glass style, marking the next step in this site’s evolution. More improvements are on the way..</p>
+</div>
+
+<div class="warning-box">
     <p class="warntext">This site is on its Public Beta Program, and will contain bugs and incomplete features.</p>
 </div>
 
