--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DJ Camo Official</title>
+    <title>DJ Camo Official - Home</title>
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -37,11 +37,16 @@
 <div class="grid-container">
 
         <div class="content1">
-        <h1>Upcoming Release</h1>
+        <h1 id="title" >Upcoming Release</h1>
         <img src="/Love M.jpg" alt="">
         <h2>Love Me </h2>
-        <h3 id="date" >01/19/26</h3>
-        <h3  id="countdown" >Waiting for server...</h3>
+        <h3 id="date" >Checking date...</h3>
+        <h3  id="countdown" >Checking date...</h3>
+<a href="https://ditto.fm/love_me_cdfc34f4" class="presavelink">
+    <div id="presavelink">
+        <h1 class="presavefont">Pre-Save Song</h1>
+    </div>
+</a>
     </div>
 </div>
 
@@ -58,11 +63,10 @@
 
 
     <div class="social-icons">
-        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
-        <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
-        <a href="https://soundcloud.com" target="_blank"><i class="fab fa-soundcloud"></i></a>
-        <a href="https://spotify.com" target="_blank"><i class="fab fa-spotify"></i></a>
+       
+        <a href="https://www.tiktok.com/@djcamo_" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="https://www.youtube.com/@DJ-CAMO-official" target="_blank"><i class="fab fa-youtube"></i></a>
+        <a href="https://open.spotify.com/artist/67TZUPh1VJNUY0MWWDGgV7?si=4pBIo9crRmqENvwsTQ9oLQ" target="_blank"><i class="fab fa-spotify"></i></a>
     </div>
 </footer>
 
