--- a/Contact/index.html
+++ b/Contact/index.html
@@ -4,30 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DJ Camo Official - Contact</title>
-    <link rel="stylesheet" href="/style.css">
-    <script src="/script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
     <div class="topcontainer">
-    <div class="topbar">
-        <h1>DJ Camo Official</h1>
-
-        <div class="nav">
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/music">Music</a></li>
-                <li><a href="/Contact" class="activepage" >Contact</a></li>
-            </ul>
+        <div class="topbar">
+            <h1>DJ Camo Official</h1>
+            <button class="burger-btn" id="burgerBtn" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <nav class="nav" id="navMenu">
+                <ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/music/">Music</a></li>
+                    <li><a href="/Contact/" class="activepage">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
-</div>
 
 
-<div class="warning-box">
-    <p class="warntext">Contact form system is not funcanl at this time, check later!</p>
-</div>
+    <div class="warning-box">
+        <p class="warntext">Contact form system is not functional at this time. Check back later!</p>
+    </div>
 
 <section class="contact-section">
   <h2>Contact Me</h2>
@@ -46,23 +49,16 @@
   </form>
 </section>
 
-<footer>
-    <p>&copy; 2026 DJ Camo Official. All rights reserved.</p>
-    social media links:
+    <footer>
+        <p>&copy; 2026 DJ Camo Official. All rights reserved.</p>
+        <p>Follow us on social media:</p>
+        <div class="social-icons">
+            <a href="https://www.tiktok.com/@djcamo_" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.youtube.com/@DJ-CAMO-official" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+            <a href="https://open.spotify.com/artist/67TZUPh1VJNUY0MWWDGgV7?si=4pBIo9crRmqENvwsTQ9oLQ" target="_blank" aria-label="Spotify"><i class="fab fa-spotify"></i></a>
+        </div>
+    </footer>
 
-
-
-    <div class="social-icons">
-                <a href="https://www.tiktok.com/@djcamo_" target="_blank"><i class="fab fa-tiktok"></i></a>
-        <a href="https://www.youtube.com/@DJ-CAMO-official" target="_blank"><i class="fab fa-youtube"></i></a>
-        <a href="https://open.spotify.com/artist/67TZUPh1VJNUY0MWWDGgV7?si=4pBIo9crRmqENvwsTQ9oLQ" target="_blank"><i class="fab fa-spotify"></i></a>
-    </div>
-</footer>
-
-</footer>
-
-
-
-
+    <script src="/script.js"></script>
 </body>
 </html>
