--- a/index.html
+++ b/index.html
@@ -4,51 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DJ Camo Official - Home</title>
-    <link rel="stylesheet" href="/style.css">
-    <script src="/script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
-    
     <div class="topcontainer">
-    <div class="topbar">
-        <h1>DJ Camo Official</h1>
-
-        <div class="nav">
-            <ul>
-                <li><a href="#home" class="activepage">Home</a></li>
-                <li><a href="/music/">Music</a></li>
-                <li><a href="Contact">Contact</a></li>
-            </ul>
+        <div class="topbar">
+            <h1>DJ Camo Official</h1>
+            <button class="burger-btn" id="burgerBtn" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <nav class="nav" id="navMenu">
+                <ul>
+                    <li><a href="#home" class="activepage">Home</a></li>
+                    <li><a href="/music/">Music</a></li>
+                    <li><a href="/Contact/">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
-</div>
-
-<div class="warning-box">
-    <p class="warntext">Every page has been reimagined with a fresh frosted‑glass style, marking the next step in this site’s evolution. More improvements are on the way..</p>
-</div>
-
-<div class="warning-box">
-    <p class="warntext">This site is on its Public Beta Program, and will contain bugs and incomplete features.</p>
-</div>
 
 
-<div class="grid-container">
 
+    <div class="warning-box">
+        <p class="warntext">Every page has been reimagined with a fresh frosted‑glass style, marking the next step in this site's evolution. More improvements are on the way.</p>
+    </div>
+
+    <div class="warning-box">
+        <p class="warntext">This site is on its Public Beta Program and will contain bugs and incomplete features.</p>
+    </div>
+
+
+    <div class="grid-container">
         <div class="content1">
-        <h1 id="title" >Upcoming Release</h1>
-        <img src="/Love M.jpg" alt="">
-        <h2>Love Me </h2>
-        <h3 id="date" >Checking date...</h3>
-        <h3  id="countdown" >Checking date...</h3>
-<a href="https://ditto.fm/love_me_cdfc34f4" class="presavelink">
-    <div id="presavelink">
-        <h1 class="presavefont">Pre-Save Song</h1>
+            <h1 id="title">Upcoming Release</h1>
+            <img src="/Love M.jpg" alt="Love Me album cover">
+            <h2>Love Me</h2>
+            <h3 id="date">Checking date...</h3>
+            <h3 id="countdown">Checking date...</h3>
+            <a href="https://ditto.fm/love_me_cdfc34f4" class="presavelink" id="prelink">
+                <h1 class="presavefont" id="prelink" >Pre-Save Song</h1>
+            </a>
+        </div>
     </div>
-</a>
-    </div>
-</div>
 
 
 
@@ -56,24 +57,17 @@
 
 
 
-<footer>
-    <p>&copy; 2026 DJ Camo Official. All rights reserved.</p>
-    social media links:
+    <footer>
+        <p>&copy; 2026 DJ Camo Official. All rights reserved.</p>
+        <p>Follow us on social media:</p>
+        <div class="social-icons">
+            <a href="https://www.tiktok.com/@djcamo_" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.youtube.com/@DJ-CAMO-official" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+            <a href="https://open.spotify.com/artist/67TZUPh1VJNUY0MWWDGgV7?si=4pBIo9crRmqENvwsTQ9oLQ" target="_blank" aria-label="Spotify"><i class="fab fa-spotify"></i></a>
+        </div>
+    </footer>
 
-
-
-    <div class="social-icons">
-       
-        <a href="https://www.tiktok.com/@djcamo_" target="_blank"><i class="fab fa-tiktok"></i></a>
-        <a href="https://www.youtube.com/@DJ-CAMO-official" target="_blank"><i class="fab fa-youtube"></i></a>
-        <a href="https://open.spotify.com/artist/67TZUPh1VJNUY0MWWDGgV7?si=4pBIo9crRmqENvwsTQ9oLQ" target="_blank"><i class="fab fa-spotify"></i></a>
-    </div>
-</footer>
-
-</footer>
-
-
-
-
+    <script src="/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
 </html>
