--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>DJ Camo Official - Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="/style.css">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3417385488001265"
+     crossorigin="anonymous"></script>
+
 </head>
 <body>
 
@@ -26,6 +30,8 @@
             </nav>
         </div>
     </div>
+
+
 
 
 
@@ -50,6 +56,7 @@
             </a>
         </div>
     </div>
+
 
 
 
