--- a/music/index.html
+++ b/music/index.html
@@ -29,7 +29,7 @@
 
     <div class="grid-container">
         <div class="content1">
-            <h1 >Hey Therem I'm DJ Camo</h1>
+            <h1 >Hey There, I'm DJ Camo</h1>
             <img src="/Photoroom_20260108_83723 pm.jpg" alt="Love Me album cover">
             <h2>Read about Me</h2>
             <h3>Hey! Music has always been a huge part of my life. I’m into a mix of styles, especially EDM, Pop, and a few others along the way. I started making my own music in 2023, kicking things off with my first release, “Crazy”. Since then, I’ve been loving the whole journey of music production and learning more every step of the way.
