--- a/music/index.html
+++ b/music/index.html
@@ -29,8 +29,8 @@
 
     <div class="grid-container">
         <div class="content1">
-            <h1 >Hey There, I'm DJ Camo</h1>
-            <img src="/Photoroom_20260108_83723 pm.jpg" alt="Love Me album cover">
+            <h1 >Hey There I'm DJ Camo</h1>
+            <img src="/Photoroom_20260108_83723 pm.png" alt="Love Me album cover">
             <h2>Read about Me</h2>
             <h3>Hey! Music has always been a huge part of my life. I’m into a mix of styles, especially EDM, Pop, and a few others along the way. I started making my own music in 2023, kicking things off with my first release, “Crazy”. Since then, I’ve been loving the whole journey of music production and learning more every step of the way.
 I have ADHD and autism, which actually gives me a unique way of thinking and creating. One random thing about me—I love going on buses in the morning (something about the vibe just hits right). While I don’t study music as a course, I do something similar that still lets me stay creative and inspired.
