--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <div class="grid-container">
         <div class="content1">
             <h1 id="title">Upcoming Release</h1>
-            <img src="/Love M.jpg" alt="Love Me album cover">
-            <h2>Love Me</h2>
+            <img src="/GOODBYE.png" alt="Love Me album cover">
+            <h2>Goodbye</h2>
             <h3 id="date">Checking date...</h3>
             <h3 id="countdown">Checking date...</h3>
             <a href="https://ditto.fm/love_me_cdfc34f4" class="presavelink" id="prelink">
