--- a/Contact/index.html
+++ b/Contact/index.html
@@ -65,7 +65,7 @@
     </footer>
 
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-<script src="live-users-frontend.js"></script>
+<script src="/live-users-frontend.js"></script>
 
     <script src="/script.js"></script>
 </body>
