--- a/index.html
+++ b/index.html
@@ -49,26 +49,17 @@
         <p class="warntext">Every page has been reimagined with a fresh frosted‑glass style, marking the next step in this site's evolution. More improvements are on the way.</p>
     </div>
 
-    <div class="warning-box">
-        <p class="warntext">This site is on its Public Beta Program and will contain bugs and incomplete features.</p>
-    </div>
-
 
     <div class="grid-container">
         <div class="content1">
-            <h1 id="title">Upcoming Release</h1>
-            <img src="/GOODBYE.png" alt="Love Me album cover">
-            <h2>Goodbye</h2>
-            <h3 id="date">Checking date...</h3>
-            <h3 id="countdown">Checking date...</h3>
-            <a href="https://ditto.fm/love_me_cdfc34f4" class="presavelink" id="prelink">
-                <h1 class="presavefont" id="prelink" >Pre-Save Song</h1>
-            </a>
+            <h1 >Hey There I'm DJ Camo</h1>
+            <img src="/Photoroom_20260108_83723 pm.png" alt="Love Me album cover">
+            <h2>Read about Me</h2>
+            <h3>Hey! Music has always been a huge part of my life. I’m into a mix of styles, especially EDM, Pop, and a few others along the way. I started making my own music in 2023, kicking things off with my first release, “Crazy”. Since then, I’ve been loving the whole journey of music production and learning more every step of the way.
+I have ADHD and autism, which actually gives me a unique way of thinking and creating. One random thing about me—I love going on buses in the morning (something about the vibe just hits right). While I don’t study music as a course, I do something similar that still lets me stay creative and inspired.
+Music isn’t just a hobby for me—it’s something I genuinely enjoy and want to keep growing with 🎶✨</h3>
         </div>
     </div>
-
-
-
 
 
 
