--- a/music/index.html
+++ b/music/index.html
@@ -36,14 +36,16 @@
         </div>
     </div>
 
-    <div class="grid-container">
+        <div class="grid-container">
         <div class="content1">
-            <h1 >Hey There I'm DJ Camo</h1>
-            <img src="/Photoroom_20260108_83723 pm.png" alt="Love Me album cover">
-            <h2>Read about Me</h2>
-            <h3>Hey! Music has always been a huge part of my life. I’m into a mix of styles, especially EDM, Pop, and a few others along the way. I started making my own music in 2023, kicking things off with my first release, “Crazy”. Since then, I’ve been loving the whole journey of music production and learning more every step of the way.
-I have ADHD and autism, which actually gives me a unique way of thinking and creating. One random thing about me—I love going on buses in the morning (something about the vibe just hits right). While I don’t study music as a course, I do something similar that still lets me stay creative and inspired.
-Music isn’t just a hobby for me—it’s something I genuinely enjoy and want to keep growing with 🎶✨</h3>
+            <h1 id="title">Upcoming Release</h1>
+            <img src="/GOODBYE.png" alt="Love Me album cover">
+            <h2>Goodbye</h2>
+            <h3 id="date">Checking date...</h3>
+            <h3 id="countdown">Checking date...</h3>
+            <a href="https://ditto.fm/love_me_cdfc34f4" class="presavelink" id="prelink">
+                <h1 class="presavefont" id="prelink" >Pre-Save Song</h1>
+            </a>
         </div>
     </div>
 
@@ -58,7 +60,7 @@ Music isn’t just a hobby for me—it’s something I genuinely enjoy and want 
     </footer>
 
 <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-<script src="live-users-frontend.js"></script>
+<script src="/live-users-frontend.js"></script>
 
     <script src="/script.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
