--- a/music/index.html
+++ b/music/index.html
@@ -43,7 +43,7 @@
             <h2>Goodbye</h2>
             <h3 id="date">Checking date...</h3>
             <h3 id="countdown">Checking date...</h3>
-            <a href="https://ditto.fm/love_me_cdfc34f4" class="presavelink" id="prelink">
+            <a href="https://ditto.fm/goodbye_238ed218" class="presavelink" id="prelink">
                 <h1 class="presavefont" id="prelink" >Pre-Save Song</h1>
             </a>
         </div>
