--- a/music/index.html
+++ b/music/index.html
@@ -15,10 +15,10 @@
     <div class="topcontainer">
 
 
-        <div class="topbar">
-                        <div class="live-mini" title="Live users">
-  <span class="live-dot"></span>
-  <span class="live-value" id="liveCount">0</span>
+    <div class="topbar"> 
+    <div class="live-mini" title="Live users">
+    <span class="live-dot"></span>
+    <span class="live-value" id="liveCount">0</span>
 </div>
             <h1>DJ Camo Official</h1>
             <button class="burger-btn" id="burgerBtn" aria-label="Toggle menu">
@@ -49,6 +49,38 @@
         </div>
     </div>
 
+
+<h2>Popular  Releases</h2>
+
+
+            <div class="grid-container gap">
+                
+             <div class="content1 mygridc">
+            <img src="artwork/Love M.jpg" alt="Love Me album cover">
+            <h2>Love Me</h2>
+            <h3>Released On: 1<sup>st</sup> January 2026</h3>
+        </div>
+
+                     <div class="content1 mygrid">
+            <img src="artwork/Love M.jpg" alt="Love Me album cover">
+            <h2>Love Me</h2>
+            <h3>Released On: 1<sup>st</sup> January 2026</h3>
+        </div>
+    </div>
+
+                <div class="grid-container gap">
+             <div class="content1">
+            <img src="artwork/stay.png" alt="Love Me album cover">
+            <h2>Goodbye</h2>
+            <h3>Released On: 1<sup>st</sup> January 2026</h3>
+        </div>
+    </div>
+
+
+
+
+
+
     <footer>
         <p>&copy; 2026 DJ Camo Official. All rights reserved.</p>
         <p>Follow us on social media:</p>
@@ -58,6 +90,8 @@
             <a href="https://open.spotify.com/artist/67TZUPh1VJNUY0MWWDGgV7?si=4pBIo9crRmqENvwsTQ9oLQ" target="_blank" aria-label="Spotify"><i class="fab fa-spotify"></i></a>
         </div>
     </footer>
+
+
 
 <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 <script src="/live-users-frontend.js"></script>
