--- a/music/index.html
+++ b/music/index.html
@@ -38,8 +38,8 @@
 
  <div class="content1">
             <h1 id="title">Upcoming Release</h1>
-            <img src="artwork/GOODBYE.png" alt="Goodbye album cover">
-            <h2>Goodbye</h2>
+            <img src="artwork/HOLA.png" alt="Hola album cover">
+            <h2>Hola</h2>
             <h3 id="date">Checking date...</h3>
             <h3 id="countdown">Checking date...</h3>
             <a href="https://ditto.fm/goodbye_238ed218" class="presavelink" id="prelink">
